# az65

./: .gitignore  404.html  Cargo.toml  README.md  advanced_macros.html  cli.html  expressions.html  introduction.html  labels.html  macro_like_directives.html  macros.html  print.html  searchindex.js  searchindex.json  simple_directives.html  strings.html  test.asm
.github/workflows/: deploy.yml
docs/: book.toml
docs/src/: SUMMARY.md  advanced_macros.md  align.md  assert.md  cli.md  db.md  def.md  dw.md  each.md  echo.md  expressions.md  getmeta.md  here.md  include.md  introduction.md  labels.md  macro_like_directives.md  simple_directives.md  string.md  strings.md  undef.md  writing_macros.md
docs/src/macro_like/: bin.md  count.md  each.md  entropy.md  hex.md  if.md  isdef.md  label.md  parse.md
docs/src/nes/: bank_switching.md  banking_metadata.md  (+1 more)
macro_like/: bin.html  count.html  each.html  entropy.html  getmeta.html  hex.html  include.html  isdef.html  label.html  parse.html  string.html
nes/: bank_switching.html  banking_metadata.html  debug_symbols.html
simple/: align.html  assert.html  db.html  defl.html  defn.html  die.html  ds.html  dw.html  echo.html  here.html  if.html  incbin.html  meta.html  org.html  redefl.html  redefn.html  segment.html  sizeof.html  struct.html  undef.html
src/: debug.rs  expr.rs  fileman.rs  intern.rs  lexer.rs  lib.rs  linker.rs  namelist.rs  ops.rs  symtab.rs
src/assembler/: mod.rs  tests.rs
src/mos6502/: mod.rs  namelist.rs  tests.rs
src/sm83/: mod.rs  sym.rs  tests.rs
src/z80/: mod.rs  tests.rs
(+20 files in other folders)
