[package]
name = "az65"
description = "A multi-CPU assembler"
version = "0.1.3"
edition = "2021"
authors = ["Scott LaVigne <lavignes@amazon.com>"]
documentation = "https://lavignes.github.io/az65/"
homepage = "https://github.com/lavignes/az65"
repository = "https://github.com/lavignes/az65"
license = "Apache-2.0"

[dependencies]
microserde = "0.1"
clap = { version = "3", features = ["derive"] }
thiserror = "1"
path-absolutize = "3"
fxhash = "0.2"
